Mark Literal Updates #432, #433, #427, #380
Question re: *Mark Literal not required for Design Only #380*: Should the text input and statement regarding 'the mark consists of / enter words / letters / numbers' be removed from the page since this mark does not contain letters / numbers / words?

--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -2878,6 +2878,9 @@ footer #megamenu ul {
 	.nav > li > a { 
 		padding-right:12px!important;
 		}
+	.label.subtle {
+    	padding-bottom: .33em;
+		}
 }
 @media (min-width: 800px) {
 	.inlinebuttons {
