Dashboard Cahnge Requests + a11y Dev
Dashboard Datatables Accessibility Development completed:

- Added aria-hidden = true for hidden columns (doesn’t test out in Safari/Voiceover — may need further dev work, maybe this is device-dependant)
- aria-alert = assertive to Toggle column visibility
- Toggle column visibility menu keyboard accessible and announces ‘expanded/collapsed’ and announces titles of toggle links when meu shows
- main nav drop-down lists announce ‘expanded/collapsed’
- Toggle Columns visibility toggles announcement ‘hide/show’
- Updated Toggle Column visibility checkmark toggle behavior in Table Two

Added link to File a Petition to Revive and adjusted column widths accordingly

--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -538,8 +538,9 @@ ul.dropdown-menu>li>a:hover  {
 	-moz-transition: background-color .2s ease;
 	transition: background-color .2s ease;
 	}
-#dashboardtableone_wrapper ul.dropdown-menu>li>a:hover, #dashboardtabletwo_wrapper ul.dropdown-menu>li>a:hover  {
+#dashboardtableone_wrapper ul.dropdown-menu>li>a:hover, #dashboardtabletwo_wrapper ul.dropdown-menu>li>a:hover, #dashboardtableone_wrapper ul.dropdown-menu>li>a:active, #dashboardtabletwo_wrapper ul.dropdown-menu>li>a:active, #dashboardtableone_wrapper ul.dropdown-menu>li>a:focus, #dashboardtabletwo_wrapper ul.dropdown-menu>li>a:focus  {
 	background-color: #808080;
+	background-image: none;
 	}
 .navbar-fixed-top .container-fluid {
 	padding:0;
